<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7281450262111610/2801286068</string>
    <string name="channel_title">Firebase message channel</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="error_email">Enter email address!</string>
    <string name="error_pass">Enter password!</string>
    <string name="error_pass_length">Password too short, enter minimum 6 characters!</string>
    <string name="error_signin">Sign In Error</string>
    <string name="sign_in_by_phone">Sign in by Phone</string>
    <string name="phone_number">+7(9**)*******</string>
    <string name="go_back">Go back</string>
    <string name="write_code">Write code from sms</string>
    <string name="code">Code</string>
    <string name="empty_code">Empty Code</string>
    <string name="instructionl_to_reset_password">Write email to reset password</string>
    <string name="check_email">Check email</string>
</resources>
